--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ nav a:hover{
 	/*background-color: var(--primary-color);*/
 	background-color: #28a68f;
 	color: white;
+	overflow-x:scroll;
 }
 
 /*This puts the icon and menu text in flex container*/
