--- a/css/utilities.css
+++ b/css/utilities.css
@@ -13,6 +13,7 @@
  --primary-color: #0c695f;
  --secondary-color:#28a68f;
  --form-background-color:#dfe8e4;
+ --side-menu-text-color:#48574f;
 }
 
 /*General Styling for body elements*/
@@ -113,7 +114,21 @@ footer{
 	
 }
 
+/*To hide the incrementor in number input type*/
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+/*Number Increment styling ends*/
 
 /*margin top and botton*/
 
