--- a/css/Hosp_Search.css
+++ b/css/Hosp_Search.css
@@ -42,6 +42,7 @@
 	width: 90%;
 	border-collapse: collapse;
 	display: none;
+	overflow: auto;
 
 }
 
@@ -100,20 +101,11 @@ th, td {
   background: #a7cfc5;
   color: var(--primary-color);
   font-size: 0.9em;
-  height: 90px;
+  height: auto;
   color: green;
 }
 
 #matchCount{
-  margin-top: 25px;
-
-  padding: 0px 5px;
-  border-left: 5px var(--primary-color) solid;
-  border-radius: 5px;
-  background: #a7cfc5;
-  color: var(--primary-color);
-  font-size: 1em;
-  width: 100%;
 
 }
 
