--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/*@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap');*/
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
 /*navbar is the background of the navigation*/
 .navbar{
@@ -258,7 +258,11 @@ input:checked ~ ul{
 /*media queries*/
 @media screen and (max-width: 600px) {
  
-
+.container{
+	width: auto;
+	margin: 0 auto;/* margin auto centrally aligns the container*/
+	/*padding-right: 0 40px;*/
+}
   .grid-container{
 
 	display: grid;
@@ -271,7 +275,7 @@ input:checked ~ ul{
 
 	display: grid;
 	grid-template-columns: auto auto;
-	max-width: 400px;
+	width:auto;
 	grid-gap: 10px;
 	margin: 0 auto;
 	}
@@ -337,7 +341,7 @@ input:checked ~ ul{
 	  margin: none;
 	  background-color: var(--primary-color);
 	  border: 1px solid #888;
-	  width: 100%;
+	  width: auto;
 	  height: 100%;
 	  border-radius: 0px;
 	  border-top-width: 0px;
