--- a/css/style.css
+++ b/css/style.css
@@ -258,6 +258,9 @@ input:checked ~ ul{
 /*media queries*/
 @media screen and (max-width: 600px) {
  
+body{
+	width:100%;
+	}
 .container{
 	
 	width: 100%; 
