--- a/css/style.css
+++ b/css/style.css
@@ -365,7 +365,7 @@ body{
 #close_hMenu{
 	  color: white;
   float: right;
-  font-size: 28px;
+  font-size: 35px;
   font-weight: bold;
   margin: 5px;
 }
@@ -391,7 +391,7 @@ body{
 /*This puts the icon and menu text in flex container*/
 .side-menu-flexHM{
 	display: flex;
-	align-items: center;
+	align-items: left;
 	padding-left: 5px;
 }
 
