--- a/css/Hosp_Search.css
+++ b/css/Hosp_Search.css
@@ -42,6 +42,7 @@
 	width: 90%;
 	border-collapse: collapse;
 	display: none;
+	overflow: auto;
 
 }
 
@@ -100,12 +101,12 @@ th, td {
   background: #a7cfc5;
   color: var(--primary-color);
   font-size: 0.9em;
-  height: 90px;
+  height: auto;
   color: green;
 }
 
 #matchCount{
-  margin-top: 25px;
+  /*margin-top: 25px;
 
   padding: 0px 5px;
   border-left: 5px var(--primary-color) solid;
@@ -113,7 +114,8 @@ th, td {
   background: #a7cfc5;
   color: var(--primary-color);
   font-size: 1em;
-  width: 100%;
+  width: 100%;*/
+  /*margin: 5px;*/
 
 }
 
@@ -144,7 +146,7 @@ th, td {
 	/*This needs checking*/
 	margin-bottom: 50px;
 	padding: 5px 0px;
-	max-height: 50px;
+	/*max-height: 60px;*/
 	padding-left: 3px;
 }
  
@@ -154,6 +156,8 @@ th, td {
 
  #table_Hospital{
  	margin-top: 20px;
+ 	width: 100%;
+ 	font-size: 0.8rem;
  }
 }
 
