--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,7 @@ input:checked ~ ul{
 	grid-template-columns: 20% 75% 5%;
 	grid-gap: 5px;
 	overflow: hidden;
+	min-height: 440px;
 }
 
 /*Content Area*/
