--- a/css/utilities.css
+++ b/css/utilities.css
@@ -14,6 +14,7 @@
  --secondary-color:#28a68f;
  --form-background-color:#dfe8e4;
  --side-menu-text-color:#48574f;
+ --table-row-background-color: #afe0d3;
 }
 
 /*General Styling for body elements*/
